--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
+
   <head>
+    <meta charset="utf-8">
     <title>rileykarp.me</title>
+    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="stylesheets/homepage.css">
   </head>
 
+  <header>
+    <nav>
+        <a href="about.html">About</a>
+        <a href="dali.html">DALI</a>
+        <a href="RileyKarpResumeOctober2017.pdf">Resume</a>
+        <a href="life.html">Life</a>
+    </nav>
+  </header>
+
   <body>
-    <h1>Riley Karp</h1>
-    <img src="images/me.jpg", width=600>
+      <h1>Riley Karp</h1>
+      <p>
+        about: hometown, bio<br>
+        DALI: design/programming applications, best thing about UI/UX design/
+        development, why excited to work @ DALI<br>
+        Resume: pdf link<br>
+        Life: dogs, crew, skiing, squam kayaking
+      </p>
   </body>
+
 <html>
