--- a/about.html
+++ b/about.html
@@ -1,4 +1,6 @@
+<!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
     <title>rileykarp.me/about</title>
@@ -6,6 +8,7 @@
 
   <body>
     <h1>About</h1>
+    about: hometown, bio<br>
     <img src="images/me.jpg", style="width:75%;">
   </body>
 
