--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
         <a href="about.html">About</a>
-        <a href="dali.html">DALI</a>
+        <a href="DALI.html">DALI</a>
         <a href="RileyKarpResumeOctober2017.pdf">Resume</a>
         <a href="life.html">Life</a>
     </nav>
@@ -19,13 +19,6 @@
 
   <body>
       <h1>Riley Karp</h1>
-      <p>
-        about: hometown, bio<br>
-        DALI: design/programming applications, best thing about UI/UX design/
-        development, why excited to work @ DALI<br>
-        Resume: pdf link<br>
-        Life: dogs, crew, skiing, squam kayaking
-      </p>
   </body>
 
 <html>
