hopefully fix broken image

--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 
   <body>
     <h1>About</h1>
-    about: hometown, bio<br>
-    <img src="images/me.jpg", style="width:75%;">
+    <p>about: hometown, bio</p>
+    <img src= "images/me.jpg", style="width:75%;">
   </body>
 
 <html>
