--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <body>
     <h1>About</h1>
     <p>about: hometown, bio</p>
-    <img src= "images/me.jpg", style="width:50%;">
+    <img src= "images/me.JPG", style="width:50%;">
   </body>
 
 <html>
