--- a/hobbies.html
+++ b/hobbies.html
@@ -1,4 +1,4 @@
-<!-- about.html - About
+<!-- life.html - Life
 Riley Karp
 11/4/2017 -->
 
@@ -7,14 +7,15 @@ Riley Karp
 
   <head>
     <meta charset="utf-8">
-    <title>rileykarp.me/about</title>
+    <title>rileykarp.me/hobbies</title>
     <link rel="stylesheet" href="stylesheets/main.css">
   </head>
 
   <body>
-    <h1>About</h1>
-    <p>about: hometown, bio</p>
-    <img src= "images/me.JPG", style="width:50%;">
+    <h1>Hobbies</h1>
+    <p>
+      Hobbies: dogs, crew, skiing, squam kayaking
+    </p>
   </body>
 
 <html>
