--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- index.html - homepage
+Riley Karp
+11/4/2017 -->
+
 <!DOCTYPE html>
 <html>
 
@@ -6,19 +10,40 @@
     <title>rileykarp.me</title>
     <link rel="stylesheet" href="stylesheets/main.css">
     <link rel="stylesheet" href="stylesheets/homepage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
-  <header>
-    <nav>
-        <a href="about.html">About</a>
-        <a href="DALI.html">DALI</a>
-        <a href="RileyKarpResumeOctober2017.pdf">Resume</a>
-        <a href="life.html">Life</a>
-    </nav>
-  </header>
-
   <body>
-      <h1>Riley Karp</h1>
+    <h1>Riley Karp</h1>
+
+    <a href="about.html">
+      <section id="about">
+        About
+      </section>
+    </a>
+
+    <a href="DALI.html">
+      <section id="dali">
+        DALI
+      </section>
+    </a>
+    <br><br><br><br><br><br><br><br><br>
+    <a href="RileyKarpResumeOctober2017.pdf">
+      <section id="resume">
+        Resume
+      </section>
+    </a>
+
+    <a href="hobbies.html">
+      <section id="hobbies">
+        Hobbies
+      </section>
+    </a>
   </body>
+
+  <footer>
+    <i class="fa fa-copyright"></i>
+    Riley Karp 2017
+  </footer>
 
 <html>
