--- a/DALI.html
+++ b/DALI.html
@@ -1,9 +1,14 @@
+<!-- DALI.html - DALI
+Riley Karp
+11/4/2017 -->
+
 <!DOCTYPE html>
 <html>
 
   <head>
     <meta charset="utf-8">
     <title>rileykarp.me/DALI</title>
+    <link rel="stylesheet" href="stylesheets/main.css">
   </head>
 
   <body>
