--- a/index.html
+++ b/index.html
@@ -4,36 +4,44 @@ Riley Karp
 
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="utf-8">
     <title>rileykarp.me</title>
-    <link rel="stylesheet" href="stylesheets/main.css">
-    <link rel="stylesheet" href="stylesheets/homepage.css">
+    <link rel="stylesheet" href="stylesheets/main.css"> <!-- clears formatting -->
+    <link rel="stylesheet" href="stylesheets/footer.css"> <!-- footer-->
+    <link rel="stylesheet" href="stylesheets/homepage.css"> <!-- homepage style-->
+    <!-- import icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
     <h1>Riley Karp</h1>
 
+    <!-- About button -->
     <a href="about.html">
       <section id="about">
         About
       </section>
     </a>
 
+    <!-- DALI Button -->
     <a href="DALI.html">
       <section id="dali">
         DALI
       </section>
     </a>
+
+    <!-- Vertical spacing between buttons -->
     <br><br><br><br><br><br><br><br><br>
+
+    <!-- Resume Button -->
     <a href="RileyKarpResumeOctober2017.pdf">
       <section id="resume">
         Resume
       </section>
     </a>
 
+    <!-- Hobbies button -->
     <a href="hobbies.html">
       <section id="hobbies">
         Hobbies
@@ -42,8 +50,28 @@ Riley Karp
   </body>
 
   <footer>
+    <!-- Copyright -->
     <i class="fa fa-copyright"></i>
     Riley Karp 2017
-  </footer>
 
+    <!-- Instagram -->
+    <a class="social" href="https://www.instagram.com/rilesssk/">
+      <i class="fa fa-instagram"></i>
+    </a>
+
+    <!-- Github -->
+    <a class="social" href="https://github.com/rskarp">
+      <i class="fa fa-github"></i>
+    </a>
+
+    <!-- LinkedIn -->
+    <a class="social" href="https://www.linkedin.com/in/rileykarp">
+      <i class="fa fa-linkedin-square"></i>
+    </a>
+
+    <!-- Email -->
+    <a class="social" href="mailto:rkarp1997@gmail.com">
+      <i class="fa fa-envelope"></i>
+    </a>
+  </footer>
 <html>
