--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ Riley Karp
   <body>
     <h1>Riley Karp</h1>
 
+    <p>~ Engineer ~ Computer Scientist ~ New Englander ~ Dog Enthusiast ~</p>
+
     <!-- About button -->
     <a href="about.html">
       <section id="about">
