navigation bar and subpages format

--- a/DALI.html
+++ b/DALI.html
@@ -5,16 +5,55 @@ Riley Karp
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>rileykarp.me/DALI</title>
-    <link rel="stylesheet" href="stylesheets/main.css">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>rileykarp.me/about</title>
+  <link rel="stylesheet" href="stylesheets/main.css"> <!-- clears formatting -->
+  <link rel="stylesheet" href="stylesheets/footer.css"> <!-- footer-->
+  <link rel="stylesheet" href="stylesheets/header.css"> <!-- header-->
+  <link rel="stylesheet" href="stylesheets/subpage.css"> <!-- subpage style-->
+  <!-- import icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+  <header>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a class="active" href="DALI.html">DALI</a>
+    <a href="resume.html">Resume</a>
+    <a href="hobbies.html">Hobbies</a>
+  </header>
 
   <body>
     <h1>DALI</h1>
     <p>DALI: design/programming applications, best thing about UI/UX design/
     development, why excited to work @ DALI</p>
   </body>
+
+  <footer>
+    <!-- Copyright -->
+    <i class="fa fa-copyright"></i>
+    Riley Karp 2017
+
+    <!-- Instagram -->
+    <a class="social" href="https://www.instagram.com/rilesssk/">
+      <i class="fa fa-instagram"></i>
+    </a>
+
+    <!-- Github -->
+    <a class="social" href="https://github.com/rskarp">
+      <i class="fa fa-github"></i>
+    </a>
+
+    <!-- LinkedIn -->
+    <a class="social" href="https://www.linkedin.com/in/rileykarp">
+      <i class="fa fa-linkedin-square"></i>
+    </a>
+
+    <!-- Email -->
+    <a class="social" href="mailto:rkarp1997@gmail.com">
+      <i class="fa fa-envelope"></i>
+    </a>
+  </footer>
 
 <html>
