--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Riley Karp
     <br><br><br><br><br><br><br><br><br>
 
     <!-- Resume Button -->
-    <a href="RileyKarpResumeOctober2017.pdf">
+    <a href="resume.html">
       <section id="resume">
         Resume
       </section>
