--- a/resume.html
+++ b/resume.html
@@ -1,13 +1,13 @@
-<!-- about.html - About
+<!-- resume.html - Resume
 Riley Karp
-11/4/2017 -->
+11/5/2017 -->
 
 <!DOCTYPE html>
 <html>
 
   <head>
     <meta charset="utf-8">
-    <title>rileykarp.me/about</title>
+    <title>rileykarp.me/resume</title>
     <link rel="stylesheet" href="stylesheets/main.css"> <!-- clears formatting -->
     <link rel="stylesheet" href="stylesheets/footer.css"> <!-- footer-->
     <link rel="stylesheet" href="stylesheets/header.css"> <!-- header-->
@@ -18,17 +18,16 @@ Riley Karp
 
   <header>
     <a href="index.html">Home</a>
-    <a class="active" href="about.html">About</a>
+    <a href="about.html">About</a>
     <a href="DALI.html">DALI</a>
-    <a href="resume.html">Resume</a>
+    <a class="active" href="resume.html">Resume</a>
     <a href="hobbies.html">Hobbies</a>
   </header>
 
   <body>
-    <h1>About</h1>
-
-    <p>about: hometown, bio</p>
-    <img src= "images/me.JPG", style="width:50%;">
+      <object data="RileyKarpResumeOctober2017.pdf" type="application/pdf" width=100% height=1000px>
+      <a href="RileyKarpResumeOctober2017.pdf">RileyKarpResumeOctober2017.pdf</a>
+    </object>
   </body>
 
   <footer>
