now  just add content

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@ Riley Karp
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
+  <!-- Navigation -->
   <header>
     <a href="index.html">Home</a>
     <a class="active" href="about.html">About</a>
@@ -25,12 +26,11 @@ Riley Karp
   </header>
 
   <body>
-    <h1>About</h1>
-
     <p>about: hometown, bio</p>
     <img src= "images/me.JPG", style="width:50%;">
   </body>
 
+  <!-- Footer -->
   <footer>
     <!-- Copyright -->
     <i class="fa fa-copyright"></i>
