--- a/DALI.html
+++ b/DALI.html
@@ -16,6 +16,7 @@ Riley Karp
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+  <!-- Navigation -->
   <header>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -25,11 +26,11 @@ Riley Karp
   </header>
 
   <body>
-    <h1>DALI</h1>
     <p>DALI: design/programming applications, best thing about UI/UX design/
     development, why excited to work @ DALI</p>
   </body>
 
+  <!-- Footer -->
   <footer>
     <!-- Copyright -->
     <i class="fa fa-copyright"></i>
