--- a/hobbies.html
+++ b/hobbies.html
@@ -16,6 +16,7 @@ Riley Karp
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+  <!-- Navigation -->
   <header>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -25,12 +26,12 @@ Riley Karp
   </header>
 
   <body>
-    <h1>Hobbies</h1>
     <p>
       Hobbies: dogs, crew, skiing, squam kayaking
     </p>
   </body>
 
+  <!-- Footer -->
   <footer>
     <!-- Copyright -->
     <i class="fa fa-copyright"></i>
