--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,7 @@ Riley Karp
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
+  <!-- Navigation -->
   <header>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -24,12 +25,14 @@ Riley Karp
     <a href="hobbies.html">Hobbies</a>
   </header>
 
+  <!-- Embed Resume -->
   <body>
       <object data="RileyKarpResumeOctober2017.pdf" type="application/pdf" width=100% height=1000px>
       <a href="RileyKarpResumeOctober2017.pdf">RileyKarpResumeOctober2017.pdf</a>
     </object>
   </body>
 
+  <!-- Footer -->
   <footer>
     <!-- Copyright -->
     <i class="fa fa-copyright"></i>
