subpage style sheet

--- a/DALI.html
+++ b/DALI.html
@@ -26,8 +26,12 @@ Riley Karp
   </header>
 
   <body>
-    <p>DALI: design/programming applications, best thing about UI/UX design/
-    development, why excited to work @ DALI</p>
+    <h1>Why would I like to join the DALI team?</h1>
+
+    <p>
+      describe: design/programming applications, best thing about UI/UX design/
+      development, why excited to work @ DALI
+    </p>
   </body>
 
   <!-- Footer -->
