--- a/about.html
+++ b/about.html
@@ -26,8 +26,17 @@ Riley Karp
   </header>
 
   <body>
-    <p>about: hometown, bio</p>
+    <h1>Hi, I'm Riley :)</h1>
+
+    <p>
     <img src= "images/me.JPG", style="width:50%;">
+    <br>
+      I'm a <a class="bio" href="https://engineering.dartmouth.edu/academics/undergraduate/dual/">dual degree engineering</a>
+      student from Holderness, New Hampshire. At Dartmouth, I'm studying biomedical
+      engineering, and at Colby College (Waterville, Maine), I'm majoring in
+      <a class="bio" href="cs.colby.edu">Computer Science</a> and minoring in
+      <a class="bio" href="http://www.colby.edu/physicsastronomy/">Physics</a>.
+    </p>
   </body>
 
   <!-- Footer -->
