--- a/hobbies.html
+++ b/hobbies.html
@@ -26,9 +26,11 @@ Riley Karp
   </header>
 
   <body>
-    <p>
-      Hobbies: dogs, crew, skiing, squam kayaking
-    </p>
+    <h1>
+      Here is a collection of random things that I enjoy!
+    </h1>
+
+    <p>put pics here</p>
   </body>
 
   <!-- Footer -->
