--- a/about.html
+++ b/about.html
@@ -29,13 +29,25 @@ Riley Karp
     <h1>Hi, I'm Riley :)</h1>
 
     <p>
-    <img src= "images/me.JPG", style="width:50%;">
+    <img src= "images/me.JPG", style="width:45%;">
     <br>
-      I'm a <a class="bio" href="https://engineering.dartmouth.edu/academics/undergraduate/dual/">dual degree engineering</a>
-      student from Holderness, New Hampshire. At Dartmouth, I'm studying biomedical
-      engineering, and at Colby College (Waterville, Maine), I'm majoring in
-      <a class="bio" href="cs.colby.edu">Computer Science</a> and minoring in
-      <a class="bio" href="http://www.colby.edu/physicsastronomy/">Physics</a>.
+      I'm a <a class="para" href="https://engineering.dartmouth.edu/academics/undergraduate/dual/">dual degree engineering</a>
+      student from Holderness, New Hampshire. I'll be graduating from Colby College
+      (Waterville, Maine) in 2019 with a Bachelor of Arts degree in
+      <a class="para" href="cs.colby.edu">Computer Science</a> and a minor in
+      <a class="para" href="http://www.colby.edu/physicsastronomy/">Physics</a>,
+      and then I'll graduate from Dartmouth College in 2020 with a
+      <a class="para" href="https://engineering.dartmouth.edu/academics/undergraduate/be/">
+      Bachelor of Engineering</a> degree in biomedical engineering. At Colby,
+      I'm a coxswain on the
+      <a class="para" href="http://www.gocolbymules.com/sports/wcrew/index">
+      Varsity Women's Crew</a> team. At Dartmouth, I'm an executive board member
+      of the Dartmouth Chinese Culture Club (DC3), a midfielder on the
+      club field hockey team, and a
+      <a class="para" href="http://careers.dartmouth-hitchcock.org/volunteer.html">
+      DHMC</a> volunteer with the Volunteers for Cancer Patients Club (VCP).
+      Some of my favorite things in life are dogs, skiing, ice cream, and the
+      <a class="para" href="http://www.patriots.com/">New England Patriots</a>.
     </p>
   </body>
 
