--- a/DALI.html
+++ b/DALI.html
@@ -7,7 +7,7 @@ Riley Karp
 
 <head>
   <meta charset="utf-8">
-  <title>rileykarp.me/about</title>
+  <title>rileykarp.me/DALI</title>
   <link rel="stylesheet" href="stylesheets/main.css"> <!-- clears formatting -->
   <link rel="stylesheet" href="stylesheets/footer.css"> <!-- footer-->
   <link rel="stylesheet" href="stylesheets/header.css"> <!-- header-->
@@ -29,8 +29,31 @@ Riley Karp
     <h1>Why would I like to join the DALI team?</h1>
 
     <p>
-      describe: design/programming applications, best thing about UI/UX design/
-      development, why excited to work @ DALI
+      If this challenge project is any indication of what it will be like
+      working with
+      <a class="para" href="http://dali.dartmouth.edu/">DALI</a>,
+      then I can't wait to (hopefully) join the team!
+      I've had so much fun learning how to use HTML/CSS and designing my own
+      webpage. I enjoy coding because I get to just press a bunch of buttons on
+      a keyboard, and it turns into something cool! (It's like pressing all the
+      buttons in an elevator, but it does something productive and doesn't
+      annoy everyone around you!)
+
+      <br>
+      <!-- Elevator button GIF -->
+      <iframe src="https://giphy.com/embed/144AvcWy0GA5Vu"
+        style="position:relative" frameBorder="0" class="giphy-embed">
+      </iframe>
+      <br>
+
+      I love UI/UX design and development because I get to combine
+      the rigidity and structure (and button-pressing aspect) of coding, with
+      the fun, colorful, and creative part of design. Although I only have
+      experience with a few design and programming applications (GIMP, SolidWorks,
+      <a class="para" href="https://github.com/rskarp/">Github</a>,
+      and now HTML5), I'm a quick learner and I'm excited to learn more
+      while working in a super cool environment with comfy, colorful couches and
+      awesome team members!
     </p>
   </body>
 
