--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@ Riley Karp
 
 <head>
   <meta charset="utf-8">
-  <title>rileykarp.me/about</title>
+  <title>rileykarp.me/hobbies</title>
   <link rel="stylesheet" href="stylesheets/main.css"> <!-- clears formatting -->
   <link rel="stylesheet" href="stylesheets/footer.css"> <!-- footer-->
   <link rel="stylesheet" href="stylesheets/header.css"> <!-- header-->
