--- a/hobbies.html
+++ b/hobbies.html
@@ -4,17 +4,16 @@ Riley Karp
 
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <title>rileykarp.me/hobbies</title>
-  <link rel="stylesheet" href="stylesheets/main.css"> <!-- clears formatting -->
-  <link rel="stylesheet" href="stylesheets/footer.css"> <!-- footer-->
-  <link rel="stylesheet" href="stylesheets/header.css"> <!-- header-->
-  <link rel="stylesheet" href="stylesheets/subpage.css"> <!-- subpage style-->
-  <!-- import icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>rileykarp.me/hobbies</title>
+    <link rel="stylesheet" href="stylesheets/main.css"> <!-- clears formatting -->
+    <link rel="stylesheet" href="stylesheets/footer.css"> <!-- footer-->
+    <link rel="stylesheet" href="stylesheets/header.css"> <!-- header-->
+    <link rel="stylesheet" href="stylesheets/subpage.css"> <!-- subpage style-->
+    <!-- import icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 
   <!-- Navigation -->
   <header>
@@ -30,7 +29,17 @@ Riley Karp
       Here is a collection of random things that I enjoy!
     </h1>
 
-    <p>put pics here</p>
+    <!-- Pictures -->
+    <p>
+      <img src= "images/race.jpg", style="width:27%;">
+      <img src= "images/mesalonskee.jpg", style="width:22%;">
+      <img src= "images/ski.jpg", style="width:22%;">
+      <img src= "images/tanka.jpg", style="width:25%;">
+      <img src= "images/utah.jpg", style="width:20%;">
+      <img src= "images/snowboard.jpg", style="width:25%;">
+      <img src= "images/kayak.JPEG", style="width:25%;">
+      <img src= "images/bella.jpg", style="width:25%;">
+    </p>
   </body>
 
   <!-- Footer -->
@@ -59,5 +68,4 @@ Riley Karp
       <i class="fa fa-envelope"></i>
     </a>
   </footer>
-
 <html>
