--- a/hobbies.html
+++ b/hobbies.html
@@ -37,7 +37,7 @@ Riley Karp
       <img src= "images/tanka.jpg", style="width:25%;">
       <img src= "images/utah.jpg", style="width:20%;">
       <img src= "images/snowboard.jpg", style="width:25%;">
-      <img src= "images/kayak.JPEG", style="width:25%;">
+      <img src= "images/kayak.jpeg", style="width:25%;">
       <img src= "images/bella.jpg", style="width:25%;">
     </p>
   </body>
