--- a/resume.html
+++ b/resume.html
@@ -25,9 +25,14 @@ Riley Karp
     <a href="hobbies.html">Hobbies</a>
   </header>
 
-  <!-- Embed Resume -->
   <body>
-      <object data="RileyKarpResumeOctober2017.pdf" type="application/pdf" width=100% height=1000px>
+    <!-- Download as PDF link -->
+    <p id="resumePDF" >
+      <a class="para" href="RileyKarpResumeOctober2017.pdf">Download as PDF</a>
+    </p>
+
+    <!-- Embed Resume -->
+    <object data="RileyKarpResumeOctober2017.pdf" type="application/pdf" width=100% height=1000px>
       <a href="RileyKarpResumeOctober2017.pdf">RileyKarpResumeOctober2017.pdf</a>
     </object>
   </body>
