--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ Riley Karp
       I'm a <a class="para" href="https://engineering.dartmouth.edu/academics/undergraduate/dual/">dual degree engineering</a>
       student from Holderness, New Hampshire. I'll be graduating from Colby College
       (Waterville, Maine) in 2019 with a Bachelor of Arts degree in
-      <a class="para" href="cs.colby.edu">Computer Science</a> and a minor in
+      <a class="para" href="http://cs.colby.edu/">Computer Science</a> and a minor in
       <a class="para" href="http://www.colby.edu/physicsastronomy/">Physics</a>,
       and then I'll graduate from Dartmouth College in 2020 with a
       <a class="para" href="https://engineering.dartmouth.edu/academics/undergraduate/be/">
